Fixed issue with left-column of admin views being too wide

--- a/sites/all/modules/contrib/wunderground_weather/styles/wunderground_weather_slac.css
+++ b/sites/all/modules/contrib/wunderground_weather/styles/wunderground_weather_slac.css
@@ -6,9 +6,6 @@
 div.pane-content > table > tbody > tr > td {
     width: 100%;
 }
-table tr td:first-child {
- width: 100%;   
-}
 div.weather-forecast-low-temp {
     color: #AAAAAA;
 }
